# 18a-CreatePoses

./: .gitignore  README.md  gen_all_poses.cpp
convert_pose_formats/: CMakeLists.txt  convert_pose_formats.cpp
convert_poses/: CMakeLists.txt  convert_poses.cpp
gen_any_poses/: gen_poses.cpp
gen_opt_poses/: CMakeLists.txt  gen_opt_poses.cpp
gen_poses/: CMakeLists.txt  balance_collision.cpp  balance_collision.hpp  gen_poses.cpp
gen_simple_opt_poses/: CMakeLists.txt  gen_simple_opt_poses.cpp
reorient_poses/: CMakeLists.txt  reorient_poses.cpp
